--- a/src/main/webapp/static/main/sys/systemmanage/resource_manage.html
+++ b/src/main/webapp/static/main/sys/systemmanage/resource_manage.html
@@ -50,29 +50,7 @@
                     <!-- Example Toolbar -->
                     <div class="example-wrap">
                         <div class="example">
-                            <div class="btn-group hidden-xs" id="exampleToolbar" role="group">
-                                <button type="button" class="btn btn-outline btn-default">
-                                    <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
-                                </button>
-                                <button type="button" class="btn btn-outline btn-default">
-                                    <i class="glyphicon glyphicon-heart" aria-hidden="true"></i>
-                                </button>
-                                <button type="button" class="btn btn-outline btn-default">
-                                    <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                </button>
-                            </div>
-                            <table id="exampleTableToolbar" data-mobile-responsive="true">
-                                <thead>
-                                <tr>
-                                    <th data-field="resourcename">资源名称</th>
-                                    <th data-field="resourcepath">资源路径</th>
-                                    <th data-field="resourcesybol">资源权限</th>
-                                    <th data-field="resourcecode">资源编码</th>
-                                    <th data-field="resourcetype">资源类型</th>
-                                    <th data-field="resourceicon">资源图标</th>
-                                </tr>
-                                </thead>
-                            </table>
+                            <table id="exampleTableToolbar" data-mobile-responsive="true"></table>
                         </div>
                     </div>
                     <!-- End Example Toolbar -->
@@ -88,7 +66,7 @@
 <script src="../../js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
 <script src="../../js/plugins/bootstrap-table/bootstrap-table-mobile.min.js"></script>
 <script src="../../js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
-<script src="../../js/demo/bootstrap-table-demo.min.js"></script>
+<script src="./js/resource_manage.js"></script>
 </body>
 
 </html>
