--- a/src/main/webapp/static/main/sys/systemmanage/resource_manage.html
+++ b/src/main/webapp/static/main/sys/systemmanage/resource_manage.html
@@ -52,13 +52,67 @@
                         <button id="del">删除</button>
                         <button id="edit">修改</button>
                     </div>
-                    <table id="resourceTable" data-mobile-responsive="true"></table>
+                    <table id="resourceTable" data-mobile-responsive="true" class="bootstrap-table"></table>
                 </div>
             </div>
         </div>
     </div>
     <!-- End Panel Basic -->
 </div>
+<div id="addForm" class="row col-sm-12" style="display: none" >
+<form class="form-horizontal" id="resourceadd">
+    <div class="form-group">
+        <label class="col-sm-3 control-label" for="resourcename">资源名称：</label>
+        <div class="col-sm-9">
+            <input type="text" id="resourcename" name="resourcename" class="form-control" placeholder="请输入文本">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-3 control-label" for="resourcepath">资源路径：</label>
+        <div class="col-sm-9">
+            <input type="text" id="resourcepath" name="resourcepath" class="form-control" placeholder="请输入文本">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-3 control-label" for="resourcesybol">资源权限：</label>
+        <div class="col-sm-9">
+            <input type="text" id="resourcesybol" name="resourcesybol" class="form-control" placeholder="请输入文本">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-3 control-label" for="resourcecode">资源编码：</label>
+        <div class="col-sm-9">
+            <input type="text" id="resourcecode" name="resourcecode" class="form-control" placeholder="请输入文本">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-3 control-label" for="resourcetype">资源类型：</label>
+        <div class="col-sm-9">
+            <input type="text" id="resourcetype" name="resourcetype" class="form-control" placeholder="请输入文本">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-3 control-label" for="resourceicon">资源图标：</label>
+        <div class="col-sm-9">
+            <input type="text" id="resourceicon" name="resourceicon" class="form-control" placeholder="请输入文本">
+        </div>
+    </div>
+    <div class="form-group hidden">
+        <label class="col-sm-3 control-label" for="resourceid">资源id：</label>
+        <div class="col-sm-9">
+            <input type="text" id="resourceid" name="resourceid" class="form-control" placeholder="请输入文本">
+        </div>
+    </div>
+    <div class="form-group hidden">
+        <label class="col-sm-3 control-label" for="parentresourceid">上级资源：</label>
+        <div class="col-sm-9">
+            <input type="text" id="parentresourceid" name="parentresourceid" class="form-control" placeholder="请输入文本">
+        </div>
+    </div>
+</form>
+</div>
+
+
 <script src="../../js/jquery.min.js?v=2.1.4"></script>
 <script src="../../js/bootstrap.min.js?v=3.3.5"></script>
 <script src="../../js/content.min.js?v=1.0.0"></script>
